# dashboard-skeleton

./: .gitignore  Dockerfile  README.md  _README.md  __main__.py  create.py  create.sh  install.py  pyproject.toml
.github/workflows/: install.yml
skeleton/: .gitignore  Dockerfile  README.md  pyproject.toml
skeleton/src/: __init__.py  __main__.py  init.py
skeleton/src/assets/: plotly_template.yaml
skeleton/src/pages/: example.py
src/dashboard-skeleton/: __main__.py
src/dashboard-skeleton/pages/: index.py
