[project]
name = "{project_name}"
version = "{current_year}.{current_month}.0"
description = "{description}"
readme = "README.md"
requires-python = ">=3.9"
authors = [{{ name = "{user_name}", email = "{user_email}" }}]
dependencies = [
    "black",
    "dash-bio>=1.0.2",
    "dash-core-components==2.0.0",
    "dash-daq",
    "dash-extensions",
    "dash-html-components==2.0.0",
    "dash-iconify",
    "dash-mantine-components==0.13.0a3",
    "dash-hummingbird-components@git+https://github.com/gitHBDX/dash-hummingbird-components",
    "dash-prometheus@git+https://github.com/gitHBDX/dash-prometheus",
    "dash-table>=5.0.0",
    "dash[diskcache]>=2.6.1",
    "diskcache",
    "gunicorn",
    "ipython",
    "pyyaml",
    "natsort",
    "numpy<2.0.0",
    {dependencies}
]

[project.urls]
"Homepage" = "https://github.com/gitHBDX/{project_name}"

[tool.setuptools.package-data]
{package_name} = ["assets/*"]

[project.scripts]
"{package_name}" = "{package_name}.__main__:main"

{extras}