[project]
name = "{project_name}"
version = "{current_year}.{current_month}.0"
description = "{description}"
readme = "README.md"
requires-python = ">=3.9"
authors = [{{ name = "{user_name}", email = "{user_email}" }}]
dependencies = [
    "black",
    "dash-bio>=1.0.2",
    "dash-core-components==2.0.0",
    "dash-daq",
    "dash-extensions",
    "dash-html-components==2.0.0",
    "dash-iconify",
    "dash-mantine-components>=0.12.0",
    "dash-prometheus@git+https://github.com/gitHBDX/dash-prometheus",
    "dash-table>=5.0.0",
    "dash[diskcache]>=2.6.1",
    "diskcache",
    "gunicorn",
    "ipython",
    "pyyaml",
    {dependencies}
]


[project.urls]
"Homepage" = "https://github.com/gitHBDX/{project_name}"

[tool.setuptools.package-data]
{package_name} = ["assets/*"]

{extras}